--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Document</title>
 </head>
 <body>
-  <header class="site-header">
+  <header class="site__header">
     <div class="container">
       <nav class="sitenav">
         <a class="site-header__logo logo" href="#">
@@ -35,14 +35,14 @@
       </nav>
     </div>
   </header>
-  <main class="site-main">
-    <section class="site-section">
+  <main class="site__main">
+    <section class="site__section">
       <div class="container">
-        <div class="site-div">
-          <h1 class="site-title">A Simple Bookmark Manager</h1>
-          <p class="site-content">A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
-          <a class="button-chrome" href="https://www.google.com/chrome/" target="_blank">Get it on Chrome</a>
-          <a class="button-firefox" href="https://www.mozilla.org/" target="_blank">Get it on Firefox</a>
+        <div class="site__div">
+          <h1 class="site__title">A Simple Bookmark Manager</h1>
+          <p class="site__content">A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
+          <a class="button_chrome" href="https://www.google.com/chrome/" target="_blank">Get it on Chrome</a>
+          <a class="button_firefox" href="https://www.mozilla.org/" target="_blank">Get it on Firefox</a>
         </div>
       </div>
     </section>
